--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,11 @@ jobs:
           restore-keys: |
             cpm-${{ matrix.config.id }}-v1-
 
+      - name: Setup CLI
+        uses: geode-sdk/cli/.github/actions/setup@main
+        with:
+          version: latest
+
       - name: Setup Geode SDK
         shell: bash
         run: |
