--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,14 @@ jobs:
           restore-keys: |
             cpm-${{ matrix.config.id }}-v1-
 
+      - name: Update LLVM (Windows)
+        if: matrix.config.id == 'win'
+        shell: bash
+        run: |
+          curl -L https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.7/LLVM-19.1.7-win64.exe -o llvm-inst.exe
+          7z x llvm-inst.exe -ollvm bin/clang.exe bin/clang++.exe bin/lld-link.exe bin/llvm-rc.exe bin/*.dll lib/clang/*/include/*
+          echo "$GITHUB_WORKSPACE/llvm/bin" >> $GITHUB_PATH
+
       - name: Setup CLI
         uses: geode-sdk/cli/.github/actions/setup@main
         with:
